Add Apache-2.0 license.

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "0.1.0",
     "displayName": "RIDE",
     "description": "Tools for Franka Emika App development",
-    "license": "UNLICENSED",
+    "license": "Apache-2.0",
     "author": {
         "name": "Franka Emika GmbH",
         "url": "https://www.franka.de"
