some updgrades, add lf language server support to README, bundle extension

--- a/package.json
+++ b/package.json
@@ -29,9 +29,10 @@
         "theme": "dark"
     },
     "engines": {
-        "vscode": "^1.40.0"
+        "vscode": "^1.80.1"
     },
     "main": "./out/extension.js",
+    "activationEvents": [],
     "contributes": {
         "configuration": [
             {
@@ -74,17 +75,20 @@
         ]
     },
     "scripts": {
-        "vscode:prepublish": "npm run compile",
+        "vscode:prepublish": "npm run -S esbuild-base -- --minify",
+        "esbuild-base": "rimraf out && esbuild ./src/extension.ts --bundle --outfile=out/extension.js --external:vscode --format=cjs --platform=node && npm run compile:tmLanguage",
         "compile:tmLanguage": "mkdir -p out && npx js-yaml syntaxes/lf.tmLanguage.yaml > out/lf.tmLanguage.json",
-        "compile:js": "tsc -p ./",
+        "compile:js": "npm run -S esbuild-base -- --sourcemap",
         "compile": "npm run compile:tmLanguage && npm run compile:js"
     },
     "dependencies": {
-        "vscode-languageclient": "^5.2.1"
+        "vscode-languageclient": "^8.1.0"
     },
     "devDependencies": {
+        "@types/node": "^20.4.2",
+        "@types/vscode": "^1.80.0",
+        "esbuild": "^0.18.14",
         "js-yaml": "^3.14.1",
-        "vsce": "^1.81.1",
-        "@types/vscode": "^1.39.0"
+        "rimraf": "^5.0.1"
     }
 }
