--- a/syntaxes/lf.tmLanguage.yaml
+++ b/syntaxes/lf.tmLanguage.yaml
@@ -5,11 +5,12 @@ patterns:
   - include: "#parameter"
   - include: "#normalState"
   - include: "#link"
+  - include: "#dynamicLink"
   - include: "#comment"
 
 repository:
   state:
-    comment: State, barrier, or link
+    comment: State, barrier, link, or dynamic link
     patterns:
       - comment: Start state arrow
         match: "(-->)(?=.*{)"
@@ -18,6 +19,7 @@ repository:
       - include: "#parameter"
       - include: "#normalState"
       - include: "#link"
+      - include: "#dynamicLink"
       - include: "#barrier"
   normalState:
     comment: Normal state
@@ -27,7 +29,18 @@ repository:
     end: "}"
     patterns:
       - include: "#clientData"
-      - include: "#portDefinition"
+      - include: "#port"
+      - include: "#typeDeclaration"
+      - include: "#lua"
+      - include: "#state"
+      - include: "#expression"
+  stateBlock:
+    comment: State block
+    begin: '{'
+    end: "}"
+    patterns:
+      - include: "#clientData"
+      - include: "#port"
       - include: "#typeDeclaration"
       - include: "#lua"
       - include: "#state"
@@ -42,7 +55,18 @@ repository:
     end: "}"
     patterns:
       - include: "#clientData"
-      - include: "#portDeclaration"
+      - include: "#port"
+      - include: "#comment"
+  dynamicLink:
+    comment: Dynamic link
+    begin: '([_a-zA-Z][_a-zA-Z0-9]*)\s*(<-)'
+    beginCaptures:
+      1: { name: entity.name.type.link.lf }
+      2: { name: keyword.other.link.lf }
+    end: "}"
+    patterns:
+      - include: "#clientData"
+      - include: "#port"
       - include: "#comment"
   barrier:
     comment: Barrier
@@ -75,13 +99,15 @@ repository:
         patterns:
           - include: "#type"
   type:
-    comment: Struct, array, and primitive types
+    comment: Struct, state interface, array, and primitive types
     patterns:
-      - comment: Struct
+      - comment: Struct or state interface
         begin: "{"
         end: "}"
         patterns:
           - include: "#type"
+          - include: "#port"
+          - include: "#typeDeclaration"
       - comment: Fixed/variable length array
         match: '\[(\d+)\]'
         captures:
@@ -90,16 +116,8 @@ repository:
         match: '\b(int|string|float|bool)\b'
         name: support.type.lf
       - include: "#comment"
-  portDeclaration:
-    comment: Port declaration (without condition) and required connection
-    match: '^\s*(port)\s+([_a-zA-Z][_a-zA-Z0-9]*)\s*(->)\s*([_a-zA-Z][_a-zA-Z0-9]*)'
-    captures:
-      1: { name: keyword.other.port.lf }
-      2: { name: entity.name.function.port.lf }
-      3: { name: keyword.control.port.lf }
-      4: { name: entity.name.type.target.lf }
-  portDefinition:
-    comment: Port definition (with condition) and optional connection
+  port:
+    comment: Port with optional condition and connection
     patterns:
       - match: '^\s*(port)\s+([_a-zA-Z][_a-zA-Z0-9]*)'
         captures:
@@ -157,6 +175,7 @@ repository:
       - include: "#builtin"
       - include: "#operator"
       - include: "#literal"
+      - include: "#stateBlock"
       - comment: Nesting
         begin: "{"
         end: "}"
