--- a/package.json
+++ b/package.json
@@ -47,6 +47,12 @@
                 }
             }
         ],
+        "commands": [
+            {
+                "command": "extension.openStatemachineVisualization",
+                "title": "RIDE: Open LF Statemachine Visualization"
+            }
+        ],
         "languages": [
             {
                 "id": "lf",
