--- a/package.json
+++ b/package.json
@@ -122,12 +122,12 @@
         ]
     },
     "scripts": {
-        "vscode:prepublish": "npm run -S esbuild-base -- --minify",
+        "vscode:prepublish": "npm run -S esbuild-base -- --minify && npm run compile:tmLanguage",
         "esbuild-base": "rimraf out && esbuild ./src/extension.ts ./src/configuration.ts ./src/stateMachineVisualization.ts ./src/stateMachineVisualizationWebview/mermaidVisualization.ts --bundle --outdir=out/ --external:vscode --format=cjs --platform=node --loader:.css=css --loader:.html=text && npm run copy-assets",
         "copy-assets": "npx copyfiles -u 1 src/stateMachineVisualizationWebview/mermaidVisualization.html src/stateMachineVisualizationWebview/styles.css out",
         "compile:tmLanguage": "mkdir -p out && npx js-yaml syntaxes/lf.tmLanguage.yaml > out/lf.tmLanguage.json",
         "compile:js": "npm run -S esbuild-base -- --sourcemap",
-        "compile": "npm run compile:tmLanguage && npm run compile:js"
+        "compile": "npm run compile:js && npm run compile:tmLanguage"
     },
     "dependencies": {
         "mermaid": "^10.6.1",
